# triage

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  build.rs  release-please-config.json
.github/workflows/: ci.yml  release.yml
packaging/: README.md
packaging/homebrew/: triage.rb
scripts/: triage-jump.sh
scripts/demo/: README.md  seed.sh  teardown.sh
scripts/hooks/: triage-preuse.sh
scripts/triage-notify/: Info.plist  build.sh  main.swift
src/: agent_comm.rs  approval.rs  auditor.rs  classifier.rs  codex.rs  config.rs  cost_rollup.rs  discovery.rs  main.rs  models.rs  notify_os.rs  persist.rs  snapshot.rs  spawn_agent.rs  tmux.rs  transcript.rs  ui.rs  watcher.rs
