[package]
name = "triage"
version = "0.1.0"
edition = "2024"
description = "TUI to monitor parallel Claude Code sessions across tmux panes — triage by attention priority"
license = "MIT OR Apache-2.0"
repository = "https://github.com/guangda-zhang/triage"
keywords = ["tui", "claude", "monitor", "tmux", "agent"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
crossterm = "0.29.0"
libc = "0.2.186"
notify = "8.2.0"
ratatui = "0.30.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
